@startuml
	skinparam style strictuml
	skinparam classAttributeIconSize 0

	skinparam BackgroundColor #fefefe

	' skinparam groupInheritance 1
	' !pragma layout smetana
	' skinparam linetype polyline
	skinparam linetype ortho

	class SpritePixmap {
		+ SpritePixmap(path: string, width: int, height: int)

		+ addToScene(scene: QGraphicsScene*): QGraphicsPixmapItem

		- _path: string
		- _width: int
		- _height: int
		- _pixmap: QPixmap;
	}

	class Sprite {
		+ Sprite(sprite: SpritePixmap&, scene: QGraphicsScene*)

		+ updatePosition(x: double, y: double)
		+ removeFromScene()

		- _pixmap_item: QGraphicsPixmapItem*
	}
	 SpritePixmap <.. Sprite: <<create>> Passed in constructor

	class Alive {
		+ Alive(uint32_t lives)

		+ isAlive(): bool
		+ getNumLives(): uint32_t
		+ takeDamage(num_lines: uint32_t)

		- _lives: uint32_t
	}

	class "Area" as RegionArea
	class RegionArea {
		+ x: int
		+ y: int
		+ width: int
		+ height: int
	}

	class Region {
		+ Region(scene: QGraphicsScene*, sprite_pixmap: SpritePixmap&, area: Area&&)

		+ getXPosition(): int
		+ getYPosition(): int

		+ isInside(x: int, y: int, width: int, height: int): bool
		+ isInside(region: Region*): bool

		+ isColliding(x: int, y: int, width: int, height: int): bool
		+ isColliding(region: Region&): bool

		+ updateSpritePosition()

		# _x: int
		# _y: int
		# _width: int
		# _height: int

		- _sprite: Sprite
	}
	RegionArea --+ Region
	Sprite --o Region

	class Point {
		+ x: int
		+ y: int
	}

	Movable_LimitedArea --+ Movable
	class "LimitedArea" as Movable_LimitedArea {
		+ begin: Point
		+ end: Point
	}
	Point "1" --o "2" Movable_LimitedArea

	class Movable extends Region {
		+ Movable(scene: QGraphicsScene*, sprite_pixmap: SpritePixmap&, area Region::Area&&)

		+ setLimitedArea(area: LimitedArea&)

		+ isCollidingAtLimitAreaRight(): bool
		+ isCollidingAtLimitAreaLeft(): bool
		+ isCollidingAtLimitAreaTop(): bool
		+ isCollidingAtLimitAreaBottom(): bool

		+ setXPosition(x: int)
		+ setYPosition(y: int)
		+ setPosition(x: int, y: int)

		+ setXVelocity(vel: int)
		+ setYVelocity(vel: int)
		+ setVelocity(dx: int, dy: int)

		+ getXVelocity(): int
		+ getYVelocity(): int

		+ updateXPosition()
		+ updateYPosition()
		+ updatePosition()

		- _limited_area: LimitedArea*
		- _dx: int
		- _dy: int
	}
	note right of Movable::_limited_area
		This attribute is optional
	end note

	enum "Target" as BulletTargets
	enum BulletTargets <<enumeration>> {
		PLAYER
		ENEMY
	}

	class Bullet extends Movable {
		+ Bullet(scene: QGraphicsScene*, target: Target, x: int, y: int)

		+ getTarget(): Target

		{static} - _sprite_pixmap: SpritePixmap
		- _target: Target
	}

	BulletTargets --+ Bullet

	class LaserCanon extends Movable, Alive {
		+ LaserCanon(scene: QGraphicsScene*, x: int, y: int)

		+ isShot(bullet: Bullet&): bool
		+ shot(): Bullet*

		+ addScore(score: uint32_t)
		+ getScore(): uint32_t

		{static} - _sprite_pixmap: SpritePixmap
		- _score: uint32_t
	}

	class SpaceShip extends Movable {
		+ SpaceShip(scene: QGraphicsScene*, x: int, y: int)

		+ isShot(bullet: Bullet&): bool
		+ shot(): Bullet*

		{static} - _sprite_pixmap: SpritePixmap
	}

	class Wave {
		+ Wave(scene: QGraphicsScene*, scene_width: int, scene_height: int, wave_width: int, ships_count: uint32_t)
		+ updatePosition()
		+ updateSpritesPosition()
		+ shot(bullets: Bullet[])
		+ killShotSpaceShips(bullets: Bullet[]): uint32_t
		+ getNumSpaceShips(): size_t

		- _scene_width: int
		- _scene_height: int
		- _y: int
		- _space_ships: SpaceShip[];
	}

	SpaceShip "*" --* "1" Wave

	class Bunker extends Region, Alive {
		+ Bunker(scene: QGraphicsScene*, x: int, y: int)
		+ isShot(bullet: Bullet&): bool

		{static} - _sprite_pixmap: SpritePixmap
	}

	enum "PressedButton" as EndGameMenu_PressedButton
	EndGameMenu_PressedButton --+ EndGameMenu
	enum EndGameMenu_PressedButton <<enumeration>> {
		RESTART
		EXIT
	}

	class "Callback" as EndGameMenu_Callback
	EndGameMenu_Callback --+ EndGameMenu
	EndGameMenu_PressedButton <.. EndGameMenu_Callback: <<use>>
	class EndGameMenu_Callback {
		+ operator()(PressedButton pressed_button): void
	}

	class EndGameMenu {
		+ EndGameMenu(callback: Callback)

		+ getWidget(): QWidget*
		+ updateScore(score: uint32_t)

		- _callback: Callback
		- _widget: QWidget
		- _score_text: QLabel
		- _layout: QVBoxLayout
		- _restart_button: QPushButton
		- _exit_button: QPushButton
	}

	enum "PressedButton" as PauseGameMenu_PressedButton
	PauseGameMenu_PressedButton --+ PauseGameMenu
	enum PauseGameMenu_PressedButton <<enumeration>> {
		RESUME
		RESTART
		EXIT
	}

	PauseGameMenu_Callback --+ PauseGameMenu
	PauseGameMenu_PressedButton <.. PauseGameMenu_Callback: <<use>>
	class "Callback" as PauseGameMenu_Callback {
		+operator()(PressedButton pressed_button): void
	}

	class PauseGameMenu {
		+ PauseGameMenu(callback: function)

		+ getWidget(): QWidget*

		- _callback: function
		- _widget: QWidget
		- _layout: QVBoxLayout
		- _resume_button: QPushButton
		- _restart_button: QPushButton
		- _exit_button: QPushButton
	}

	class "ExitButtonCallback" as GameScene_ExitButtonCallback
	GameScene_ExitButtonCallback --+ GameScene
	class GameScene_ExitButtonCallback {
		+ operator()(): void
	}

	class GameScene {
		+ GameScene(width: int, height: int, exit_button_callback: ExitButtonCallback)

		- _deleteOutOfRangeBullets()
		- _checkShotsOnLaserCanon()
		- _checkShotsOnBunkers()
		- _killShotEnemies()

		- _width: int
		- _height: int
		- _exit_button_callback: ExitButtonCallback

		- _laser_canon: LaserCanon*
		- _wave: Wave*
		- _bunkers: Bunker[]
		- _bullets: Bullet[]
		- _score_text: QGraphicsTextItem

		- _pause_menu: PauseGameMenu
		- _end_game_menu: EndGameMenu
	}
	LaserCanon "1" --* "1" GameScene
	Bunker "0..3" --* "1" GameScene
	Wave "1" --* "1" GameScene
	Bullet "*" --* "1" GameScene
	EndGameMenu "1" --* "1" GameScene
	PauseGameMenu "1" --* "1" GameScene

	enum "PressedButton" as InitialMenuScene_PressedButton
	InitialMenuScene_PressedButton --+ InitialMenuScene
	enum InitialMenuScene_PressedButton <<enumeration>> {
		START
		EXIT
	}

	class "Callback" as InitialMenuScene_Callback
	InitialMenuScene_Callback --+ InitialMenuScene
	InitialMenuScene_PressedButton <.. InitialMenuScene_Callback: <<use>>
	class InitialMenuScene_Callback {
		+ operator()(PressedButton pressed_button): void
	}

	class InitialMenuScene {
		+ InitialMenuScene(width: int , height: int, callback: Callback)

		- _width: int
		- _height: int
		- _callback: Callback

		- _widget: QWidget
		- _layout: QVBoxLayout
		- _text: QLabel
		- _start_button: QPushButton
		- _exit_button: QPushButton
	}

	class Game {
		+ Game(app: QApplication*, width: int, height: int)
		+ start(): int

		- _app: QApplication*
		- _width: int
		- _height: int

		- _view: QGraphicsView
		- _initial_scene: InitialMenuScene
		- _game_scene: GameScene
	}

	GameScene "1" --* "1" Game
	InitialMenuScene "1" --* "1" Game
@enduml
